create first page of web spa to characters.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Cyberpunk Help Page Header</h1>
+    <h1 style="width: 100%; text-align: center; height: 50px;"><img src="assets/cyberpunk.gif" style="float:left"/> Cyberpunk Help Page<img src="assets/cyberpunk.gif" style="float:right"/></h1>
   </div>
 
   <div class="body">     
@@ -102,7 +102,7 @@
   </div>
 
   <div class="footer">
-    <h3>Cyberpunk Help Page Footer</h3>
+    <h3>Creada por Jazz Fortuna(c) 2023, todos los derechos reservados.</h3>
   </div>
 
 </body>
