--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
   <div class="header">
-    <h1>ERROR 404</h1>
+    <ul>
+      <li><a href="../../"><img src="../../assets/cyberpunk.gif" style="height: 30px;"/></a></li>
+      <li><a href="#pjs">Salón de la Fama</a></li>
+      <li><a href="#pnjs">Personajes Deshechables</a></li>
+      <li style="float:right"><a href="#creator">Crear Personaje</a></li>
+    </ul>
   </div>
 
   <div class="body">     
@@ -21,7 +26,7 @@
   </div>
 
   <div class="footer">
-    <h3>Cyberpunk Help Page Footer</h3>
+    <h3>Creada por Jazz Fortuna(c) 2023, todos los derechos reservados.</h3>
   </div>
 
 </body>
