--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -37,6 +37,8 @@
           'collection': 'personajes'
         }),
         success: function(data) {
+          console.log('Response: ');
+          console.log(data);
           /* let html = '<ul>\n';
           $.each(data, function(id, obj) {
             html += '<li>' + obj.nombre + ' (' + obj.jugador + ')</li>';
