style for character sheet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 style="width: 100%; text-align: center; height: 50px;"><img src="assets/cyberpunk.gif" style="float:left"/> Cyberpunk Help Page<img src="assets/cyberpunk.gif" style="float:right"/></h1>
   </div>
 
-  <div class="body">     
+  <div class="bodyflex">     
 
     <div class="card" id="personajes">
       <img src="assets/secciones/Hojas.jpg"/>
