adding data dinamically with a grid view

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="main">
       <div class="grid-container">
-        <div class="grid-value grid-col2 grid-row5"><img src="../../assets/_No-Photo.jpg" width="300px"/></div>
+        <div class="grid-value grid-col2 grid-row6"><img src="../../assets/_No-Photo.jpg" width="300px"/></div>
         <div class="grid-label">Personaje:</div><div class="grid-value grid-col2" id="nombre"></div>
         <div class="grid-label">Jugador:</div><div class="grid-value grid-col2" id="jugador"></div>
 
@@ -43,8 +43,10 @@
         <div class="grid-label">Peso:</div><div class="grid-value grid-col2" id="peso"></div>
         <div class="grid-label">Estado:</div><div class="grid-value grid-col2" id="estado"></div>
 
-        <div class="grid-value grid-fill grid-col6" id="descripcion">Descripción: </div>
-
+        <div class="grid-label grid-fill grid-col6" style="text-align: left">Descripción: </div>
+        <div class="grid-value grid-fill grid-col6" id="descripcion">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius mattis placerat. Fusce euismod ante placerat vestibulum maximus. In hac habitasse platea dictumst. Proin eu auctor leo, quis vulputate felis. Aenean eget massa a sem blandit placerat quis sit amet lacus. Fusce tincidunt vulputate diam. Aliquam rutrum pharetra est, sit amet tristique ante vulputate non.
+          Integer laoreet vestibulum euismod. Cras at lectus erat. Donec vitae nibh et orci consequat maximus nec vel felis. Nam interdum, sapien aliquet consequat tincidunt, sem mi vestibulum risus, a tincidunt magna mi a nunc. Maecenas congue augue elit, sit amet porttitor magna pulvinar et. Nam vestibulum interdum nisl non sollicitudin. In hac habitasse platea dictumst. Vestibulum lorem velit, rhoncus sed massa a, ultrices venenatis ligula. Mauris ligula urna, lobortis id lorem tempus, ornare convallis lacus. Aenean eleifend erat et risus facilisis feugiat. Suspendisse non risus ligula. Vestibulum imperdiet lobortis accumsan. Nam ligula quam, tincidunt vitae metus vel, imperdiet molestie risus. Aenean erat tortor, vulputate tincidunt lectus nec, placerat vulputate ipsum. Proin sodales eros a convallis hendrerit.</div>
       </div>
     </div>
   </div>
