save button and toggle editable form

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -30,6 +30,10 @@
     </div>
 
     <div id="main">
+      <div class="grid-container grid-general-block">
+        <div class="grid-fill grid-col8 content-right"><button id="update-button">Update</button></div>
+      </div>
+
       <div class="grid-container grid-general-block" id="general-block-title">
         <div class="grid-fill grid-col8"><p class="grid-section">DATOS BÁSICOS</p></div>
       </div>
