feat: update character into database

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -64,13 +64,13 @@
         <div class="grid-label text-right"><label for="fecha_nacimiento">Fecha de Nacimiento:</label></div>
         <div class="grid-col2"><input type="text" class="grid-value" id="fecha_nacimiento"/></div>
 
-        <div class="grid-label text-right"><label for="estatura">Estatura:</label></div>
+        <div class="grid-label text-right"><label for="estatura">Estatura (mts):</label></div>
         <div class="grid-col2"><input type="text" class="grid-value" id="estatura"/></div>
 
-        <div class="grid-label text-right"><label for="experiencia">Experiencia:</label></div>
+        <div class="grid-label text-right"><label for="experiencia">Experiencia (pp):</label></div>
         <div class="grid-col2"><input type="text" class="grid-value" id="experiencia"/></div>
 
-        <div class="grid-label text-right"><label for="peso">Peso:</label></div>
+        <div class="grid-label text-right"><label for="peso">Peso (kgs):</label></div>
         <div class="grid-col2"><input type="text" class="grid-value" id="peso"/></div>
 
         <div class="grid-label text-right"><label for="estado">Estado:</label></div>
