fix: update character

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -50,7 +50,7 @@
         <div class="grid-fill grid-col8"><p class="grid-section">DATOS BÁSICOS</p></div>
       </div>
       <div class="grid-container grid-general-block" id="general-block-content">
-        <div class="grid-label text-center grid-col2"><label>Imagen del Personaje</label></div>
+        <div class="grid-label text-center grid-col2"><label>Imagen del Personaje</label><input type="hidden" class="grid-value" id="i"/></div>
         <div class="grid-label text-right"><label for="nombre">Personaje:</label></div>
         <div class="grid-col2"><input type="text" class="grid-value" id="nombre"/></div>
 
