feat: delete button (withouth action)

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -43,6 +43,7 @@
           <button id="edit-button">Editar Personaje</button>
           <button id="save-button">Guardar Hoja</button>
           <button id="print-button">Imprimir Hoja</button>
+          <button id="delete-button">Eliminar Personaje</button>
         </div>
       </div>
 
