--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -117,6 +117,13 @@
           <div class="text-center"><label>Tirada Base</label></div>
         </div> 
         <div class="grid-container grid-abilities-block" id="abilities-block-content"></div>
+        <div id="add-abilities-block" class="grid-container grid-general-block">
+          <div class="grid-fill grid-col8 content-right">
+            <button id="add-special-button" class="action_buttons">Nueva Especial</button>
+            <button id="add-primary-button" class="action_buttons">Nueva Principal</button>
+            <button id="add-secondary-button" class="action_buttons">Nueva Secundaria</button>
+          </div>
+        </div>
       </div>
 
       <div class="grid-container grid-cyberware-block" id="cyberware-block-title">
