--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -117,11 +117,12 @@
           <div class="text-center"><label>Tirada Base</label></div>
         </div> 
         <div class="grid-container grid-abilities-block" id="abilities-block-content"></div>
-        <div id="add-abilities-block" class="grid-container grid-general-block">
-          <div class="grid-fill grid-col8 content-right">
-            <button id="add-special-button" class="action_buttons">Nueva Especial</button>
-            <button id="add-primary-button" class="action_buttons">Nueva Principal</button>
-            <button id="add-secondary-button" class="action_buttons">Nueva Secundaria</button>
+        <div class="grid-container grid-general-block" id="abilities-block-actions">
+          <div class="grid-fill grid-col8 content-right action-buttons">
+            <label>Agregar: </label>
+            <button id="add-special-button">Especial</button>
+            <button id="add-primary-button">Principal</button>
+            <button id="add-secondary-button">Secundaria</button>
           </div>
         </div>
       </div>
@@ -140,6 +141,12 @@
           <div class="text-center"><label>Descripción</label></div>
         </div> 
         <div class="grid-container grid-cyberware-block" id="cyberware-block-content"></div>
+        <div class="grid-container grid-general-block" id="cyberware-block-actions">
+          <div class="grid-fill grid-col8 content-right action-buttons">
+            <label>Agregar: </label>
+            <button id="add-cyberware-button">Implante</button>
+          </div>
+        </div>
       </div> 
 
       <div class="grid-container grid-gear-block" id="gear-block-title">
@@ -155,6 +162,14 @@
           <div class="text-center"><label>Descripción</label></div>
         </div>
         <div class="grid-container grid-gear-block" id="gear-block-content"></div>
+        <div class="grid-container grid-general-block" id="gear-block-actions">
+          <div class="grid-fill grid-col8 content-right action-buttons">
+            <label>Agregar: </label>
+            <button id="add-armor-button">Blindaje</button>
+            <button id="add-weapon-button">Arma</button>
+            <button id="add-gear-button">Equipo</button>
+          </div>
+        </div>
       </div>
 
       <div class="grid-container grid-other-block" id="other-block-title">
@@ -167,6 +182,14 @@
           <div class="text-center"><label>Descripción</label></div>
         </div>
         <div class="grid-container grid-other-block" id="other-block-content"></div>
+        <div class="grid-container grid-general-block" id="other-block-actions">
+          <div class="grid-fill grid-col8 content-right action-buttons">
+            <label>Agregar: </label>
+            <button id="add-drug-button">Droga</button>
+            <button id="add-terminal-button">Terminal</button>
+            <button id="add-vehicle-button">Vehículo</button>
+          </div>
+        </div>
       </div>
 
       <div class="grid-container grid-extra-block" id="extra-block-title">
