feat: add ability operatory

--- a/sections/characters/index.html
+++ b/sections/characters/index.html
@@ -120,9 +120,9 @@
         <div class="grid-container grid-general-block" id="abilities-block-actions">
           <div class="grid-fill grid-col8 content-right action-buttons">
             <label>Agregar: </label>
-            <button id="add-special-button">Especial</button>
-            <button id="add-primary-button">Principal</button>
-            <button id="add-secondary-button">Secundaria</button>
+            <button id="add-special-button" onclick="addNewRow('capacidad_especial', 'abilities', 'especial');">Especial</button>
+            <button id="add-primary-button" onclick="addNewRow('habilidades_principales', 'abilities', 'principal');">Principal</button>
+            <button id="add-secondary-button" onclick="addNewRow('habilidades_secundarias', 'abilities', 'secundaria');">Secundaria</button>
           </div>
         </div>
       </div>
